// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "google/protobuf/any.proto";

message DefExtension {
    reserved 2;

    string description       = 1;
    google.protobuf.Any impl = 3;
}

message SerializedMessage {
    repeated string name  = 1;  // Full proto name.
    bytes           value = 2;
}